deployment/idis-app/templates/gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: teamemerge/gateway_service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          resources:
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "350Mi"
              cpu: "500m"


---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-svc
spec:
  #types : ClusterIP | LoadBalancer | NodePort
  type: ClusterIP
  selector:
    app: gateway-service
  ports:
    - port: 80
      targetPort: 9000
    #- protocol: TCP
    #  nodePort: 30000
